Fix an issue that download started UKM is not recorded

BUG=878941

Change-Id: Id4dcd3ed90ada0b0dfce643addf4751d9eb23424
Reviewed-on: https://chromium-review.googlesource.com/1195937
Reviewed-by: Xing Liu <xingliu@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587391}
Former-commit-id: 58bde6bc94bf6cb066200c13ed03cf0b1b0d0b05